# golem-workers

./: .gitignore  CONTRIBUTING.md  README.md  openapi.json  pyproject.toml
clusterapi/: exceptions.py  golem.py  golem_helpers.py  main.py  models.py
examples/beta-tests/: create-cluster.json  create-node.json  delete-cluster.json  get-node.json
examples/docker/: Dockerfile  docker-compose.yaml
examples/hello-example/: create-cluster.json  create-node.json
examples/ollama/: Dockerfile  create-cluster.json  create-node.json  delete-cluster.json
examples/sd-example/: create-cluster.json  create-node.json  delete-cluster.json  get-node.json  sd-inference.py
golem_cluster_api/: budgets.py  commands.py  context.py  defaults.py  exceptions.py  golem.py  main.py  models.py  payloads.py  settings.py  utils.py
golem_cluster_api/cluster/: __init__.py  cluster.py  manager_stack.py  node.py  sidecars.py
golem_cluster_api/commands/: __init__.py  create_cluster.py  create_node.py  delete_cluster.py  delete_node.py  get_cluster.py  get_node.py  get_proposals.py
golem_reputation/: __init__.py  exceptions.py  models.py  service.py  settings.py  updater.py
golem_reputation/entrypoints/cli/: database.py  main.py  reputation.py  utils.py
golem_reputation/plugins/: __init__.py  blacklist.py  score.py
golem_workers/: budgets.py  containers.py  context.py  defaults.py  exceptions.py  golem.py  main.py  models.py  payloads.py  settings.py  sidecars.py  utils.py  work.py
golem_workers/cluster/: __init__.py  cluster.py  manager_stack.py  node.py  sidecars.py
golem_workers/commands/: __init__.py  base.py  create_cluster.py  create_node.py  delete_cluster.py  delete_node.py  get_cluster.py  get_node.py  get_proposals.py
golem_workers/entrypoints/web/: __init__.py  application.py  endpoints.py  main.py
tests/: happy_path.py
utils/: extract-openapi.py
