[tool.poetry]
name = "golem-cluster-api"
version = "0.1.0"
description = "TODO"
authors = ["Golem Factory <contact@golem.network>"]
readme = "README.md"
packages = [{ include = "golem_cluster_api" }]

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.8.1"
golem-core = {path = "../golem-core-python", develop = true}
#golem-core = "^0.7.3"
# ray-on-golem = {git = "https://github.com/golemfactory/ray-on-golem.git", branch = "approxit/cluster-cleanup"}
#ray-on-golem = {path = "../golem-ray", develop = true}
#ray-on-golem = {version = "^0.11.0a2", source = "test-pypi"}
fastapi = "^0.111.0"
pydantic-settings = "^2.3.1"
dpath = "^2.1.6"

[tool.poetry.group.dev.dependencies]
autoflake = "^1"
black = {extras = ["jupyter"], version = "^24.4.2"}
isort = "^5"

poethepoet = "^0.8"
pydevd-pycharm = ">=231.8109.197,<231.8110.0"

[tool.poe.tasks]
format = {sequence = ["_format_autoflake", "_format_isort", "_format_black"], help = "Run code auto formatting"}
_format_autoflake = "autoflake ."
_format_isort = "isort ."
_format_black = "black ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
py_version = 38
line_length = 100
skip_gitignore = true

[tool.autoflake]
recursive = true
in-place = true
remove-all-unused-imports = true
ignore-init-module-imports = true

[tool.black]
line-length = 100
target-version = ['py38']
